[gd_scene load_steps=5 format=3 uid="uid://dyc2g7ysxu68k"]

[ext_resource type="Script" uid="uid://bhb8clpeuw2p1" path="res://scenes/main/MainScene.gd" id="1_hujxm"]
[ext_resource type="Script" uid="uid://hgk7xq01nii0" path="res://VoxelVehicle.gd" id="2_6q06x"]
[ext_resource type="Script" uid="uid://dplcyiiy76lqm" path="res://scripts/resources/ProjectilePoolManager.gd" id="2_l3cfh"]
[ext_resource type="Script" uid="uid://dbbfpfqt4sode" path="res://ui/UI.gd" id="3_6q06x"]

[node name="Main" type="Node3D"]
script = ExtResource("1_hujxm")
environment_size = Vector3(100, 10, 100)
voxel_size = 2.0

[node name="PlayerVehicle" type="CharacterBody3D" parent="."]
script = ExtResource("2_6q06x")
voxel_model_path = "res://assets/models/vehicles/tank_model_voxels.tres"

[node name="SpringArm3D" type="SpringArm3D" parent="PlayerVehicle"]
transform = Transform3D(1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 2, 0)
spring_length = 8.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="PlayerVehicle/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.08429, 1.74226)
current = true
fov = 45.0
far = 300.0

[node name="Environment" type="Node3D" parent="."]

[node name="ProjectilePoolManager" type="Node" parent="."]
script = ExtResource("2_l3cfh")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_6q06x")

[node name="AmmoCounter" type="Label" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 43.0
text = "Ammo: 30 / 30"

[node name="HealthBar" type="ProgressBar" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 220.0
offset_bottom = 77.0
value = 100.0
